# 3rd_log4cpp

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.py  conanfile.py  log4cppConfig.cmake
include/log4cpp/: Category.hh  PatternLayout.hh  Priority.hh  SimpleConfigurator.hh
src/: Category.cpp  PatternLayout.cpp  Priority.cpp  PropertyConfiguratorImpl.cpp  PropertyConfiguratorImpl.hh  SimpleConfigurator.cpp
